...
                .fillMaxWidth()
                .padding(8.dp)
        ) {
            InputFilterComponent(
                modifier = Modifier
                    .weight(1f)
                    .testTag("search_field")
                    .padding(end = 8.dp),
                searchQuery = searchQuery,
                onSearch = { viewModel.onSearchText(it) }
            )
            FavoriteFilterButton(
                onlyFavorite,
...
    Card(
        shape = RoundedCornerShape(16.dp),
        elevation = CardDefaults.cardElevation(defaultElevation = 4.dp),
        modifier = Modifier
            .padding(horizontal = 16.dp, vertical = 6.dp)
            .fillMaxWidth()
            .testTag("itemCity")
            .clickable { onItemClick(item) }
    ) {
        Column(
            modifier = Modifier
                .background(backgroundColor)
                .padding(16.dp)
...
