...
            FloatingActionButton(
                onClick = {
                    onDetailItemClick?.invoke()
                },
                modifier = Modifier
                    .align(Alignment.TopEnd)
                    .testTag("detail_fab")
                    .padding(all = 15.dp)
            ) {
                Icon(
                    Icons.Filled.Info,
                    contentDescription = stringResource(R.string.detail)
                )
...
